changed heading attributes and title, and consolidated css items

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon</title>
+    <title>Horiseon Social Solution Services, Inc.</title>
 </head>
 
 <body>
@@ -25,7 +25,7 @@
         </nav>
     </header>
 
-    <img class="hero" src="./assets/images/digital-marketing-meeting.jpg" alt="group collaborating" height="800px" width="100%"></img>
+    <img class="hero"></img>
 
     <main class="content">
         <article class="search-engine-optimization">
@@ -76,7 +76,7 @@
     
     <!-- removed footer 'class' -->
     <footer>
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <h3>Made with ❤️️ by Horiseon</h3>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
