added comments in css and fixxed hero img bug and cleaned up comments

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -25,7 +25,7 @@
         </nav>
     </header>
 
-    <img class="hero"></img>
+    <div class="hero" alt="Group collaborating"></div>
 
     <main class="content">
         <article class="search-engine-optimization">
@@ -74,7 +74,6 @@
         </section>
     </aside>
     
-    <!-- removed footer 'class' -->
     <footer>
         <h3>Made with ❤️️ by Horiseon</h3>
         <p>
