added descriptive comments to html

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -8,8 +8,11 @@
 </head>
 
 <body>
+    
+    <!-- Header -->
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
+        <!-- Nav bar -->
         <nav>
             <ul>
                 <li>
@@ -25,8 +28,10 @@
         </nav>
     </header>
 
+    <!-- Main image -->
     <div class="hero" alt="Group collaborating"></div>
 
+    <!-- Body -->
     <main class="content">
         <article class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="workstation items on desk" class="float-left" />
@@ -50,6 +55,8 @@
             </p>
         </article>
     </main>
+
+    <!-- Aside info -->
     <aside class="benefits">
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -74,6 +81,7 @@
         </section>
     </aside>
     
+    <!-- Footer -->
     <footer>
         <h3>Made with ❤️️ by Horiseon</h3>
         <p>
